# scotch

./: Cargo.toml  README.md  justfile  runner.sh
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/plugin/: Cargo.toml
examples/plugin/src/: lib.rs
examples/runner/: Cargo.toml  plugin.wasm
examples/runner/src/: main.rs
guest/: Cargo.toml
guest-macros/: Cargo.toml
guest-macros/src/: lib.rs
guest/src/: encoded.rs  lib.rs  managed.rs
host/: Cargo.toml
host-macros/: Cargo.toml
host-macros/src/: lib.rs
host/benches/: call.rs
host/src/: alloc.rs  encoded.rs  error.rs  export.rs  lib.rs  managed.rs  plugin.rs
macros/: Cargo.toml
macros/src/: lib.rs
