[workspace]
members = ["host", "guest", "host-macros", "guest-macros", "examples/*"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
bincode = "2.0.0-rc.2"
parking_lot = "0.12"
wasmer = "3"

scotch-guest-macros = { path = "guest-macros" }
scotch-host-macros = { path = "host-macros" }

[profile.release]
lto = true
