[package]
name = "scotch-guest"
edition = "2021"
version.workspace = true
license = "MIT"
authors = ["ItsEthra"]
repository = "https://github.com/ItsEthra/scotch"

[features]
default = ["scotch-macros"]

[dependencies]
scotch-macros = { path = "../macros", optional = true }
bincode.workspace = true
