[package]
name = "scotch-guest"
edition = "2021"
description = "Scotch guest api for creating WASM plugins"
version.workspace = true
license = "MIT"
authors = ["ItsEthra"]
repository = "https://github.com/ItsEthra/scotch"

[dependencies]
scotch-guest-macros = { path = "../guest-macros" }
bincode.workspace = true
