[package]
name = "scotch-host"
edition = "2021"
version.workspace = true
license = "MIT"
authors = ["ItsEthra"]
repository = "https://github.com/ItsEthra/scotch"

[features]
default = ["compiler", "cranelift"]

singlepass = ["wasmer/singlepass"]
cranelift = ["wasmer/cranelift"]
llvm = ["wasmer/llvm"]

compiler = []

[dependencies]
scotch-host-macros = { path = "../host-macros" }
parking_lot = "0.12"

bincode.workspace = true
wasmer.workspace = true
