[package]
name = "scotch-host"
edition = "2021"
description = "Scotch host api for creating WASM plugins."
version.workspace = true
license = "MIT"
authors = ["ItsEthra"]
repository = "https://github.com/ItsEthra/scotch"

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "call"
harness = false

[features]
default = ["compiler", "cranelift"]

singlepass = ["wasmer/singlepass"]
cranelift = ["wasmer/cranelift"]
llvm = ["wasmer/llvm"]

compiler = []
unstable-doc-cfg = []

[dependencies]
scotch-host-macros = { path = "../host-macros" }
flate2 = { version = "1.0", optional = true }
parking_lot = "0.12"

bincode.workspace = true
wasmer.workspace = true

[dev-dependencies]
criterion = "0.4"
