[package]
name = "runner"
edition = "2021"
version.workspace = true
license = "MIT"
authors = ["ItsEthra"]
repository = "https://github.com/ItsEthra/scotch"

[dependencies]
scotch-host = { path = "../../host" }
common = { path = "../common" }
bincode.workspace = true
wasmer.workspace = true
eyre = "0.6.8"
